tools/tests/errors/hash_non_string.ki
discard import("hash").sha256(123)
